demo examples, refine

--- a/index.html
+++ b/index.html
@@ -337,6 +337,10 @@
   </div>
   
   <div>
+    <h2>straight lines are hard af</h2>
+  </div>
+  
+  <div>
     <h2>humans use rulers</h2>
   </div>
   
@@ -345,7 +349,7 @@
   </div>
   
   <div>
-    <h2>but what do computers use?</h2>
+    <h2>what about computers?</h2>
   </div>
   
   <div>
@@ -464,6 +468,34 @@ var bresenDraw = function(x0,y0,x1,y1){
   </div>
   
   <div>
+    <img src="assets/demo-1.png" />
+  </div>
+    
+  <div>
+    <img src="assets/demo-2.png" />
+  </div>  
+  
+  <div>
+    <img src="assets/demo-3.png" />
+  </div>  
+
+  <div>
+    <img src="assets/demo-5.jpg" />
+  </div> 
+   
+  <div>
+    <img src="assets/demo-6.png" />
+  </div> 
+   
+  <div>
+    <img src="assets/demo-7.png" />
+  </div>  
+  
+  <div>
+    <img src="assets/demo-8.png" />
+  </div>
+  
+  <div>
     <h2>the moral of the story</h2>
   </div>
   
@@ -482,12 +514,21 @@ var bresenDraw = function(x0,y0,x1,y1){
     </ul>
   </div>
   
-    <div>
+  <div>
     <h2>the moral of the story</h2>
     <ul>
       <li>lines are hard to draw</li>
       <li>it's not atypical for art to be mathematical</li>
-      <li>bresenham's line algorithm is p easy to implement</li>
+      <li>never ask your coworkers for help</li>
+    </ul>
+  </div>
+  
+  <div>
+    <h2>the moral of the story</h2>
+    <ul>
+      <li>lines are hard to draw</li>
+      <li>it's not atypical for art to be mathematical</li>
+      <li>never ask your coworkers for help (jk)</li>
     </ul>
   </div>
   
@@ -496,7 +537,8 @@ var bresenDraw = function(x0,y0,x1,y1){
       
     <ul>
       <li>@jennschiffer</li>
-      <li>http://jenn.money</li>
+      <li><a href="http://jenn.money">jenn.money</a></li>
+      <li><a href="http://github.com/jennschiffer/codegenius">github.com/jennschiffer/codegenius</a></li>
     </ul>
   </div>
 
