more obnoxious screenshots

--- a/index.html
+++ b/index.html
@@ -320,9 +320,16 @@
     <h2>but they kind of suck at it too</h2>
   </div>
   
-  
   <div>
     <img src="assets/line-computer-zoomed.png" />
+  </div>  
+  
+  <div>
+    <img src="assets/line-computer-zoomed-more.png" />
+  </div>
+  
+  <div>
+    <img src="assets/line-computer-zoomed-even-more.png" />
   </div>
 
   <div>
@@ -569,7 +576,7 @@ var bresenDraw = function(x0,y0,x1,y1){
   </div>
   
   <div>
-    <h3>thank you 💰</h3>
+    <h3>thank you line geniuses 💰</h3>
       
     <ul>
       <li><a href="http://github.com/jennschiffer/codegenius">github.com/jennschiffer/codegenius</a></li>
